# octo

./: .config.json  .dockerignore  .gitignore  .mcp.json  ANDROID_BUILD.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  STAGED_TODO.md  TODO.md  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  install.sh  restart_rulyeh.sh  start_dev.sh  stop_dev.sh
.desktop/: package-lock.json
.github/workflows/: android.yml  cli.yml  ios.yml  (+4 more)
app/: Cargo.toml  Dockerfile  docker-entrypoint-server.sh  docker-entrypoint.sh
claudulhu/: pyproject.toml
cli/: Cargo.toml  install
cli/src/: agents.rs  containers.rs  dockerd.rs  init.rs  main.rs  mcp.rs  service.rs  ssh.rs
core/: Cargo.toml
deploy/: deploy-claudulhu.sh
desktop/: package.json
docs/: agent-isolation.md  agent-spawning.md  cache-strategy.md  child-image-updates.md  connection-architecture.md  env-config.md  history-compaction.md  kubernetes-migration.md  mcp-tools.md  relay-architecture.md  rulyeh-architecture.md  ssh-certs.md  tool-output-limits.md
k8s/: lair.yaml  namespace.yaml  rbac.yaml  rulyeh.yaml  secret.example.yaml  setup.md
k8s-ops/: Cargo.toml
k8s-ops/src/: aws.rs  config.rs  k8s.rs  lib.rs
lair/: CHANGELOG.md  Cargo.toml  Dockerfile
mobile/: .gitignore  App.tsx  app.json  package-lock.json  package.json
relay/: Cargo.toml
rulyeh/: Cargo.toml  Dockerfile  docker-entrypoint.sh
scripts/: get-cli.sh  restart-all.sh
server/: CHANGELOG.md  Cargo.toml  Dockerfile  docker-entrypoint.sh
tests/: Cargo.toml
web/: package-lock.json  package.json
(+75 files in other folders)
