[package]
name        = "octo"
version     = "0.2.0"
edition     = "2021"
description = "octo lair management CLI"

[[bin]]
name = "octo"
path = "src/main.rs"

[dependencies]
octo-core         = { path = "../core" }
anyhow            = "1.0"
clap              = { version = "4", features = ["derive", "env"] }
clap_complete     = "4"
serde             = { version = "1.0", features = ["derive"] }
serde_json        = "1.0"
tokio             = { version = "1", features = ["full"] }
snow              = "0.9"
data-encoding     = "2"
qrcode            = "0.14"
reqwest           = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
futures-util      = "0.3"
tracing           = "0.1"
libc              = "0.2"
