[package]
name        = "octo-k8s-ops"
version     = "0.1.0"
edition     = "2021"
description = "Shared Kubernetes and AWS operations for octo"

[dependencies]
anyhow      = "1.0"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
tokio       = { version = "1",   features = ["full"] }
tracing     = "0.1"
kube        = { version = "0.99", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24", features = ["v1_32"] }
